Updated layout, added video thumbnails

--- a/client/index.html
+++ b/client/index.html
@@ -63,14 +63,13 @@
           </div>
         <% } %>
 
-        <div id="controls">
+        <div id="controls" class="cf">
           <div id="control-pauseplay"><span class="hotkey">P</span>ause/<span class="hotkey">P</span>lay</div>
           <div id="control-skip"><span class="hotkey">S</span>kip</div>
           <% if (isPlayer) { %>
             <div id="control-fullscreen"><span class="hotkey">F</span>ullscreen</div>
           <% } %>
         </div>
-        <div class="clear"></div>
 
         <div id="playlist"></div>
       </div>
