--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
     <div id="container"></div>
 
     <script id="room-selector-template" type="text/template">
-      <h1><a href="/">Joe<span>Toep</span></a></h1>
+      <h1>Joe<span>Toep</span></h1>
 
       <div id="room-selector">
         <form id="room-form">
