Fixed header becoming link after screen changes

--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
     </script>
 
     <script id="type-selector-template" type="text/template">
-      <h1><a href="/">Joe<span>Toep</span></a></h1>
+      <h1>Joe<span>Toep</span></h1>
 
       <div id="type-selector">
         <div id="type-remote">
@@ -44,7 +44,7 @@
     </script>
 
     <script id="in-room-template" type="text/template">
-      <h1><a href="/">Joe<span>Toep</span></a></h1>
+      <h1>Joe<span>Toep</span></h1>
       
       <div id="collumn-left">
         <form id="search-form">
