--- a/client/index.html
+++ b/client/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>JoeToep</title>
+    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script src="swfobject.js"></script>
     <script src="underscore.js"></script>
     <script src="socket.io/socket.io.js"></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
 
     <script src="player.js"></script>
     <script src="client.js"></script>
@@ -28,6 +29,8 @@
           <input type="submit">
         </form>
       </div>
+
+      <div id="footer">JoeToep by <a href="http://sanderbakkum.nl">Sander Bakkum</a>
     </script>
 
     <script id="type-selector-template" type="text/template">
@@ -41,6 +44,8 @@
           Player
         </div>
       </div>
+
+      <div id="footer">JoeToep by <a href="http://sanderbakkum.nl">Sander Bakkum</a>
     </script>
 
     <script id="in-room-template" type="text/template">
@@ -73,6 +78,8 @@
 
         <div id="playlist"></div>
       </div>
+
+      <div id="footer">JoeToep by <a href="http://sanderbakkum.nl">Sander Bakkum</a>
     </script>
   </body>
 </html>
